Prevent wrap text.

--- a/src/components/ArticlesList/styles.scss
+++ b/src/components/ArticlesList/styles.scss
@@ -32,7 +32,9 @@
         }
       }
     }
-
+    .right {
+      white-space: nowrap;
+    }
     .see-more {
       font-size: 16px;
       line-height: 19px;
